# virtualos-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  \
crates/cgroups/: Cargo.toml
crates/cgroups/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: cmd.rs  container.rs  helpers.rs  main.rs  types.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: client.rs  lib.rs  service.rs
crates/ebpf/: Cargo.toml
crates/ebpf/ebpf-probes/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/container/: child.rs  helpers.rs  impls.rs  mod.rs  types.rs
crates/engine/src/image/: auth.rs  config.rs  constants.rs  helpers.rs  manifest.rs  mod.rs  puller.rs  types.rs  unpack.rs
crates/engine/src/mount/: mod.rs
crates/logging/: Cargo.toml
crates/monitoring/: Cargo.toml
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: virtualos.proto
crates/proto/src/: lib.rs  virtualos.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/virtualization/: Cargo.toml
scripts/: cgroup.sh  rebuild.sh  test.sh
