[package]
name = "virtualos-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/cli",
    "crates/engine",
    "crates/storage",
    "crates/network",
    "crates/cgroups",
    "crates/monitoring",
    "crates/logging",
    "crates/ebpf",
    "crates/virtualization",
    "crates/daemon",
    "crates/proto",
]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.103"
clap = "4.6.1"
cgroups-rs = "0.5.0"
futures = "0.3.32"
hex = "0.4.3"
nix = { version = "0.31.3", features = ["fs", "ioctl", "net", "poll", "process", "pthread", "ptrace", "resource", "signal"] }
reqwest = { version = "0.13.4", default-features = false }
serde = "1.0.228" 
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.46"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
uuid = "1.23.5"
walkdir = "2.5.0"
