[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "virtualos-rs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
nix = { workspace = true, features = ["mount", "sched", "hostname"] }
# ------------ local deps ------------
engine = { path = "../engine" }
daemon = { path = "../daemon" }
network = { path = "../network" }
storage = { path = "../storage"}
