[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cgroups = { path = "../cgroups" }
flate2 = "1.1.9"
hex = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking", "rustls"], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
sha2 = { workspace = true }
storage = { path = "../storage" }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
uuid = { workspace = true, features = ["v4"] }
